[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Resources/saw.png" type="Texture" id=1]
[ext_resource path="res://Production/ProductionItem.gd" type="Script" id=2]

[node name="ProductionItem" type="HBoxContainer"]
margin_right = 436.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 36.0
margin_right = 41.0
margin_bottom = 32.0
rect_min_size = Vector2( 5, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 45.0
margin_right = 110.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Wood Saw"
valign = 1

[node name="ThroughputLabel" type="Label" parent="."]
margin_left = 114.0
margin_right = 273.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.156863, 0.133333, 0.133333, 1 )
text = "(0 out)"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 277.0
margin_right = 277.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="HireButton" type="Button" parent="."]
margin_left = 281.0
margin_right = 324.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
text = "Hire!"

[node name="FireButton" type="Button" parent="."]
margin_left = 328.0
margin_right = 364.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
text = "Fire"

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 368.0
margin_right = 436.0
margin_bottom = 32.0
rect_clip_content = true
text = "Active"

[connection signal="pressed" from="HireButton" to="." method="_on_HireButton_pressed"]
[connection signal="pressed" from="FireButton" to="." method="_on_FireButton_pressed"]
[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
